# pexi

./: .gitignore  AGENTS.md  README.md  alpine-learnings.md  config.toml  howto.md  learnings-session.md
docs/: hla.md  plan-mvp-vm-sandbox.md
pep-daemon/: Cargo.toml  avf_runner  avf_runner.swift  build_avf_runner.sh  entitlements.plist  learnings-session  learnings.md  learnings2.md
pep-daemon/src/: audit.rs  config.rs  framing.rs  health.rs  http_exec.rs  main.rs  policy.rs  ssrf.rs  types.rs
policies/: data.json  pep.rego  pep_test.rego
spikes/: validate_spike.sh
spikes/alpine-img/: bake_alpine_image.sh  meta-data  user-data
spikes/alpine-img/workspace/intercept-test/: a25-limits.mjs  a3-modern.mjs  package-lock.json  package.json  test.mjs
spikes/browser-intercept/: package-lock.json  package.json
spikes/browser-intercept/src/: run.ts
spikes/cdp-intercept/: package-lock.json  package.json  run.js  vsock_pep.py
spikes/ubuntu-img/: bake_chromium_image.sh  meta-data  user-data
spikes/vm-node-fetch/: bootstrap.sh  fetch_proxy.js  vsock_fetch.py
